[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ripcomic"
version = "0.0.2"
authors = [
  { name="Diogo", email="nordicdev14@outlook.com" },
]
dependencies = ['requests', 'outputformat', 'beautifulsoup4']

description = "A comic scraper written in python. Still under development."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nordic16/ripcomic"
"Bug Tracker" = "https://github.com/nordic16/ripcomic/issues"